$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.92-1 (opened August 23, 2011)

	* specaccum, fitspecaccum: gained predict() methods. With
	specaccum() predict(..., newdata) can estimate values for
	'newdata' with linear or spline interpolation if necessary.
	Without 'newdata' the function returns the the fitted expected
	richness.  With fitspecaccum(), the predict.nls() is performed to
	each fitted model. Function fitspecaccum() is written so that
	default fitted(), residuals() and coef() work.

	* specpool: failed if 'pool' had NA values or empty factor
	levels. Checks that 'pool' length matches nrow of data.

	* NAMESPACE: imports nobs from permute_0.5-3 in R 2.12.2 and older
	which do not yet have nobs() generic.

	* vegandocs: shows the permutation vignette of the 'permute'
	package. 
	
Version 1.92-0 (closed August 23, 2011)

	* open new version with the release of vegan_1.17-12 on August 17,
	2011. 

	* fitspecaccum: a typo and a condition was never true.

	* monoMDS & metaMDS: always print types of stress and ties.

	* NAMESPACE: export pasteCall for analogue.

	* NEWS: added file NEWS.Rd for vegan release 2.0 news in Rd format.
	Keeping neat formatting of this file may be challenging to many
	text editors, but it is worth trying. This file should list the
	important items for regular vegan users, whereas this ChangeLog
	should explain the changes to other vegan developers. If
	getOption("help_type") == "html", should start a browser to show
	the NEWS, and use text console otherwise ("html" tested on MacOS
	R.App GUI, text mode in Linux and MacOS bash shells, no testing on
	Windows yet). Although the browser knows how to display NEWS.Rd,
	it does not format the page properly (\code{foo} shows as ordinary
	text etc). As a kluge we now make a NEWS.html file in the inst/doc
	directory. NEWS.html cannot be made in the inst/ directory since
	browser only agrees to show NEWS (plain) in the main directory or
	files in doc directory.
	